Modifications for parabolic bowl

--- a/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
+++ b/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
@@ -2,16 +2,21 @@
 [vertical_grid]
 
 # Number of vertical levels
-vert_levels = 10
+vert_levels = 30
 
 # config options for drying slope test cases
-[drying_slope]
+[parabolic_bowl]
 
-# the number of grid cells in x
-nx = 6
+# dimensions of domain in x and y directions (km)
+Lx = 1440
+Ly = 1560
+
+forward_ntasks = 36
+forward_min_tasks = 4 
+forward_threads = 1
 
 # config options for visualizing drying slope ouptut
-[drying_slope_viz]
+[parabolic_bowl_viz]
 
 # whether to generate movie
 generate_movie = False
