Reorganize resolutions and add viz

--- a/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
+++ b/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
@@ -11,9 +11,30 @@ vert_levels = 30
 Lx = 1440
 Ly = 1560
 
-forward_ntasks = 36
-forward_min_tasks = 4 
-forward_threads = 1
+# Coriolis parameter
+coriolis_parameter = 1.031e-4
+
+# Maximum initial ssh magnitude
+eta_max = 2.0
+
+# Maximum water depth
+depth_max = 50.0
+
+# Angular fequency of oscillation
+omega = 1.4544e-4
+
+# Gravitational acceleration
+gravity = 9.81
+
+# Number of tasks for resolutions
+20km_ntasks = 36
+20km_min_tasks = 4 
+
+10km_ntasks = 36
+10km_min_tasks = 4
+ 
+5km_ntasks = 36
+5km_min_tasks = 4 
 
 # config options for visualizing drying slope ouptut
 [parabolic_bowl_viz]
