--- a/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
+++ b/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
@@ -39,11 +39,14 @@ gravity = 9.81
 # config options for visualizing drying slope ouptut
 [parabolic_bowl_viz]
 
-# whether to generate movie
-generate_movie = False
+# coordinates (in km) for timeseries plot
+points = [0,0], [300,0], [610,0]
 
-# frames per second for movies
-frames_per_second = 30
-
-# movie format
-movie_format = mp4
+## whether to generate movie
+#generate_movie = False
+#
+## frames per second for movies
+#frames_per_second = 30
+#
+## movie format
+#movie_format = mp4
