--- a/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
+++ b/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
@@ -42,6 +42,9 @@ gravity = 9.81
 # coordinates (in km) for timeseries plot
 points = [0,0], [300,0], [610,0]
 
+# additional directories to add to convergence plot
+error_compare = []
+
 ## whether to generate movie
 #generate_movie = False
 #
