Setup ramp/noramp cases

--- a/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
+++ b/compass/ocean/tests/parabolic_bowl/parabolic_bowl.cfg
@@ -1,8 +1,7 @@
-# Options related to the vertical grid
-[vertical_grid]
+[job]
 
-# Number of vertical levels
-vert_levels = 30
+wall_time = 2:00:00
+
 
 # config options for drying slope test cases
 [parabolic_bowl]
@@ -28,13 +27,13 @@ gravity = 9.81
 
 # Number of tasks for resolutions
 20km_ntasks = 72
-20km_min_tasks = 4 
+20km_min_tasks = 4
 
 10km_ntasks = 72
 10km_min_tasks = 4
- 
+
 5km_ntasks = 72
-5km_min_tasks = 4 
+5km_min_tasks = 4
 
 # config options for visualizing drying slope ouptut
 [parabolic_bowl_viz]
