Modifications for subgrid in hurricane case

--- a/compass/ocean/tests/hurricane/mesh/devr45to5rr1/devr45to5rr1.cfg
+++ b/compass/ocean/tests/hurricane/mesh/devr45to5rr1/devr45to5rr1.cfg
@@ -10,7 +10,11 @@ cull_mesh_min_cpus_per_task = 1
 cull_mesh_max_memory = 1000
 
 # Elevation threshold to use for including land cells
-floodplain_elevation = 10.0
+floodplain_elevation = 20.0
+# Resolution threshold to use for including land cells
+floodplain_resolution = 4.0
+# Minimum depth to enforce outside floodplain region
+min_depth_outside_floodplain = 1.0
 
 
 # options for global ocean testcases
@@ -26,9 +30,9 @@ email = autodetect
 
 ## config options related to the initial_state step
 # number of MPI tasks to use
-init_ntasks = 36
+init_ntasks = 1
 # minimum of MPI tasks, below which the step fails
-init_min_tasks = 8
+init_min_tasks = 1
 # maximum memory usage allowed (in MB)
 init_max_memory = 1000
 # number of threads
@@ -36,9 +40,9 @@ init_threads = 1
 
 ## config options related to the forward steps
 # number of MPI tasks to use
-forward_ntasks = 180
+forward_ntasks = 1024
 # minimum of MPI tasks, below which the step fails
-forward_min_tasks = 18
+forward_min_tasks = 1024
 # maximum memory usage allowed (in MB)
 forward_max_memory = 1000
 # number of threads
