Cull mesh using remapped topography for ice shelves, region mask for floodplain

--- a/compass/ocean/tests/hurricane/mesh/devr45to5rr1/devr45to5rr1.cfg
+++ b/compass/ocean/tests/hurricane/mesh/devr45to5rr1/devr45to5rr1.cfg
@@ -47,3 +47,37 @@ forward_min_tasks = 1024
 forward_max_memory = 1000
 # number of threads
 forward_threads = 1
+
+# config options related to remapping topography to an MPAS-Ocean mesh
+[remap_topography]
+
+# the name of the topography file in the bathymetry database
+topo_filename = BedMachineAntarctica_v3_and_GEBCO_2023_0.0125_degree_20240828.nc
+
+# variable names in topo_filename
+lon_var = lon
+lat_var = lat
+bathymetry_var = bathymetry
+ice_thickness_var = thickness
+ice_frac_var = ice_mask
+grounded_ice_frac_var = grounded_mask
+ocean_frac_var = ocean_mask
+bathy_frac_var = bathymetry_mask
+
+# the description to include in metadata
+description = Bathymetry is from GEBCO 2023, combined with BedMachine
+              Antarctica v3 around Antarctica.
+
+# the target and minimum number of MPI tasks to use in remapping
+ntasks = 4096
+min_tasks = 360
+
+# remapping method {'bilinear', 'neareststod', 'conserve'}
+method = conserve
+
+# threshold of what fraction of an MPAS cell must contain ocean in order to
+# perform renormalization of elevation variables
+renorm_threshold = 0.01
+
+# the density of land ice from MALI (kg/m^3)
+ice_density = 910.0
